--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,11 @@
-__pycache__/
-.env
-config.json
-key.txt
+.tags
+*.egg-info
+build/*
+dist/*
+spotr
+*.pyc
+.tox
+.cache
+.idea
+spotrpy/config.json
+spotrpy/__pycache__
