--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,5 @@
 *.egg-info
 build/*
 dist/*
-spotr
-spotrpy/__pycache__
-spotrpy/commands/__pycache__
-spotrpy/Util/config.json
-spotrpy/config.json
-spotrpy/Util/__pycache__
+**/__pycache__
+**/config.json
